# burtiti_shopping_core

./: .dockerignore  .gitignore  Dockerfile  README.md  check_templates.py  db.sqlite3  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
core/: seed_checkout_data.py  settings.py  urls.py
core/settings/: __init__.py  base.py  development.py  production.py
docs/: deploy-aws-ec2.md
scripts/: seed_checkout_data.py
shop/: views.py
shop/order/: __init__.py  apps.py
shop/store/: signals.py
shop/tests/: factories.py  test_cart.py  test_seed_checkout_data.py
static/CACHE/: manifest.json
static/CACHE/css/: output.049229a5466a.css  output.058bea80e592.css  output.0945a5b3f490.css  output.0bc382c459e1.css  output.28188965a96c.css  output.28fddb79a69b.css  output.2c5cf61be0c6.css  output.39ea37d29157.css  output.3b62a0b2018e.css  output.3e74d9d4e252.css  output.40b432210b89.css  output.4a73a1556605.css  output.536552b2a828.css  output.53dbbed91720.css  output.580a13aabe79.css  output.5cea55dca7bc.css  output.5d0a0d857cd4.css  output.63d2855eaffe.css  output.64644a3e842c.css  output.6c8864dbd106.css  output.6fc4b33b53e1.css  output.72cbcee1fea2.css  output.7bde1e358313.css  output.8172aaee7caf.css  output.824c6fe74230.css  (+27 more)
static/css/: index.css
static/src/: bootstrap_theme.scss  output.css
templates/: base.html  flowbite_base.html  index.html  layout.html  layout_2_col.html  product_cards.html
templates/flowbite/: base.html
templates/oscar/: layout.html  layout_2_col.html
whoosh_index/: MAIN_v0nr6ipdn3uer097.seg
(+24 files in other folders)
