[project]
name = "buriti-shopping-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-compressor>=4.6.0",
    "django-oscar[sorl-thumbnail]>=4.1",
    "factory-boy>=3.3.0",
    "ipython>=9.13.0",
    "whoosh>=2.7.4",
]
