[project]
name = "buriti_shopping_core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django-compressor>=4.6.0",
    "django-libsass>=0.9",
    "django-oscar[sorl-thumbnail]>=4.1",
    "factory-boy>=3.3.0",
    "ipython>=9.13.0",
    "libsass>=0.23.0",
    "whoosh>=2.7.4",
    "psycopg2-binary>=2.9.6",
    "celery>=5.3.0",
    "redis>=4.6.0",
    "django-celery-beat>=2.3.0",
    "gunicorn>=21.2.0",
]

